Make use of JDK16